Updated routes and readme
